[package]
name = "seal-rust"
version = "0.1.0"
authors = ["Congcong Li, lcc1999@sjtu.edu.cn"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
git2 = "0.8"
bindgen = "0.42.2"
cc = "1.0"
[dependencies]
libc = "*"
[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']
